Aligning login form correctly

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,3 @@
 .search-padding {
   padding-bottom: 1rem;
 }
-
-#root {
-  height: 100%;
-}
